<resources>
    <string name="app_name">caritas_login_inicio</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="usuario">Usuario</string>
    <string name="contrase_a">Contraseña</string>
    <string name="has_olvidado_tu_contrase_a">¿Has olvidado tu contraseña?</string>
    <string name="login">Login</string>
    <string name="escribe_tu_email_aqu">Escribe tu email aquí</string>
    <string name="escribe_tu_contrase_a_aqu">Escribe tu contraseña aquí</string>
    <string name="flecha_return_home">flecha_return_home</string>
    <string name="logo_caritas">logo_caritas</string>
    <string name="bienvenido_a_c_ritas_de_monterrey">¡Bienvenido a Cáritas de Monterrey!</string>
    <string name="configuraci_n">Configuración</string>
    <string name="empezar">Empezar</string>
    <string name="logo_caritas_izq">logo_caritas_izq</string>
    <string name="logo_caritas_der">logo_caritas_der</string>
    <string name="opciones_de_usuario">Opciones de Usuario</string>
    <string name="nombre_de_usuario">Nombre de usuario:</string>
    <string name="dashboard">Dashboard</string>
    <string name="log_out">Log Out</string>
    <string name="notificaciones">Notificaciones</string>
    <string name="correo_electr_nico">Correo Electrónico:</string>
    <string name="contrase_a_user_options">Contraseña:</string>
    <string name="norificaciones_prueba">norificaciones_prueba</string>
    <string name="dashboard_user">Dashboard</string>
    <string name="opciones_de_usuario_dashboard">Opciones de Usuario</string>
    <string name="log_out_user">Log Out</string>
    <string name="grafica1_desc">grafica1</string>
    <string name="grafica2_desc">grafica2</string>
    <string name="grafica3_desc">grafica3</string>
    <string name="grafica4_desc">grafica4</string>
    <string name="solicitante_titulo">Complete el registro</string>
    <string name="a_qu_departamento_se_dirige">1. Departamento o empleado al que se dirige</string>
    <string name="qu_es_lo_que_necesita">2. ¿Qué es lo que \n necesita?</string>
    <string name="enviar_solicitante">Enviar</string>
    <string name="inicia_tu_turno_aqu">Inicia tu turno aquí</string>
    <string name="boton_menu_login">boton_menu_login</string>
</resources>